sites/all/themes/simplecorp/css/main-css.css
/* ... */
ul#social-links > li.pinterest-link:hover {
    display: inline-block;
    font-size: 12px;
    width: 32px;
    height: 32px;
    background: #e63037;
    background: -moz-linear-gradient(top, #e63037 0%, #bf1018 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e63037), color-stop(100%,#bf1018));
    background: -webkit-linear-gradient(top, #e63037 0%,#bf1018 100%);
    background: -o-linear-gradient(top, #e63037 0%,#bf1018 100%);
    background: -ms-linear-gradient(top, #e63037 0%,#bf1018 100%);
    background: linear-gradient(top, #e63037 0%,#bf1018 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e63037', endColorstr='#bf1018',GradientType=0 );
    text-indent: -9999px;
    box-shadow: 0px 1px 1px #ae0d13,inset 0px 2px 5px #fc545b;
    -moz-box-shadow: 0px 1px 1px #ae0d13,inset 0px 2px 5px #fc545b;
    -webkit-box-shadow: 0px 1px 1px #ae0d13,inset 0px 2px 5px #fc545b;
}
/* ---------------------------------------------------------------------- */
/* 04-   HEADER CSS 
/* ---------------------------------------------------------------------- */

/* -------------------------------------------------- */
/* HEADER,CONTAINER, RESPONSIVE NAVIGATION
/* -------------------------------------------------- */
/*#page { height: auto; width: 1020px; background: #FFF; -webkit-box-shadow: 0 10px 80px 0 rgba(0, 0, 0, 0.20); -moz-box-shadow: 0 10px 80px 0 rgba(0, 0, 0, 0.20);
        box-shadow: 0 10px 80px 0 rgba(0, 0, 0, 0.20); padding: 0px; margin: 50px auto 100px; }*/
#page { height: auto; background: #FFF; 
         padding: 0px; }

#header-wrapper { width:100% }

.fb-like { float: left;
    margin-left: 23px;
    margin-top: 16px; }

#twitter-follow { float:left;
		  margin-top : 16px;
		  margin-left : 10px }

#pre-header .content a:hover { text-decoration: underline; }

#pre-header h2 { color: #fff; text-shadow:0px 1px #81BCD1; }

#pre-header ul.menu li{ display: inline-block; margin: 0; padding: 0; }  

#pre-header ul.menu li a{ font-style: normal; padding: 2px 16px 2px 12px; text-decoration: none; color: #fff; text-shadow:0px 1px #81BCD1; border-right: 1pt solid #a8dcee; }

#pre-header ul.menu li.first a, #pre-header ul.menu li:first-child a{ padding-left:0 }

#pre-header ul.menu li a:hover{ text-decoration: underline; }        

#pre-header ul.menu li.last a, #pre-header ul.menu li:last-child a { border:none; }

#pre-header ul.menu ul.menu, #pre-header ul.menu ul{ display:none; }

#header { height: 68px; padding: 0px 0 17px 0; float: left; width: 100%; }

.front #header {border-bottom: 1pt solid #D8D5CD;}

#header-right {width : 100%; float:right;  padding-top: 30px; width: 100%;}

#navigation-wrapper { /*float: right;*/ }

#breadcrumb { margin: 30px 0 20px 0; }

#content { padding-bottom: 30px; font-size: 14px; margin:30px auto 0 }

.not-front #content { margin-top:0px; }

.front #content{ margin-top: 0px; }

#header-left { float: left;text-align:center; width: 100%; }

h1#site-name{ font-size: 18px; margin:0 0 12px 0; line-height: 27px;}

h2#site-slogan{ color: #dbdbdb; margin:0 0 16px 0; font-size: 16px; line-height: 16px; }

.not-front #site-slogan { display: none; }

#tagline { margin: 0; white-space: nowrap; }

#mm0 { display: none; width: 100%; padding: 6px; font: normal normal 12px/1em 'Open Sans', Arial, Tahoma, sans-serif; border: 1px solid #ccc; color: #666; }

.block-superfish select { width: 100%; padding: 6px; font: normal normal 12px/1em 'Open Sans', Arial, Tahoma, sans-serif; border: 1px solid #ccc; color: #666; }

/* -------------------------------------------------- */
/* Columns
/* -------------------------------------------------- */
.container { margin: 0 auto; position: relative; width: 940px; }

.one-third,.two-third,.one-fourth,.three-fourth,.one-column { /*float: left;*/ margin-right: 0px; margin-bottom: 0px; }
.one-half { float: left; margin-right: 0px; margin-bottom: 0px; }

.one-half.last,.one-third.last,.two-third.last,.one-fourth.last,.three-fourth.last, .one-fourth.widget-4, .one-fourth.widget-8, .one-fourth.widget-12 { margin-right: 0px; }

.one-half { width: 320px; }

.one-third { width: 410px; }

.two-third { width: 820px; }

.one-fourth { width: 220px; }

.three-fourth { width: 700px; }

.horizontal-line { width: 100%; margin: 30px 0; float: left; border-top: 1px solid #e1e1e1; }

.one-fourth.widget-1, .one-fourth.widget-5 , .one-fourth.widget-9 { clear: both; }

/* -------------------------------------------------- */
/* MAVIGATION
/* -------------------------------------------------- */
.downarrowclass { position: absolute; top: 53px; right: 5px; }

.rightarrowclass { position: absolute; top: 10px; right: 10px; }

#main-navigation li.last { clear:none; }

#main-navigation > ul.menu, #main-navigation .content > ul.menu, #main-navigation ul.sf-menu { margin: -30px 160px 0 150px; clear:both; }

#main-navigation > ul.menu:after, #main-navigation .content > ul.menu:after, #main-navigation ul.sf-menu:after, #main-navigation .content:after { content: "."; display: block; clear: both; 
visibility: hidden; line-height: 0; height: 0; }    

#main-navigation ul.menu li, #main-navigation ul.sf-menu li { list-style: none; float: left; position: relative }

#main-navigation ul.sf-menu li { background: transparent; }

#main-navigation ul.menu li a, #main-navigation ul.sf-menu li a { color: #898989; font-family: 'Dosis', 'Verdana', sans-serif; font-size: 24px; font-weight: normal; /*padding: 37px 12px 20px 12px;*/
margin: 0 0 10px 0; position: relative; text-align: center; text-transform: uppercase; float: left; overflow: hidden; line-height: 20px; }

#main-navigation ul.sf-menu li a { border: none; }

#main-navigation ul.menu li a:hover,
#main-navigation > ul.menu > li > a.active,
#main-navigation ul.sf-menu li a:hover,
#main-navigation ul.sf-menu > li > a.active,
#main-navigation .content > ul.menu > li > a.active { color: #9dcedf;/* background: #f8f8f8; border-bottom: 1pt solid #9dcedf;*/ }
/* ... */

